--- a/backend/apps/hospital/templates/Hospital/patients-my-patients.html
+++ b/backend/apps/hospital/templates/Hospital/patients-my-patients.html
@@ -119,15 +119,15 @@
             <input type="checkbox" class="rowCheckbox">
           </td>
   <!--        <td></td>-->
-          <td style="text-align: end">{{i.patients.id}}</td>
+          <td style="text-align: end">{{ i.patients.id }}</td>
           <td>
-            <a href="" style="color: #0b79d0">{{i.patients.l_name}} {{i.patients.f_name}}</a>
+            <a href="" style="color: #0b79d0">{{ i.patients.l_name }} {{ i.patients.f_name }}</a>
           </td>
           <td style="text-align: end">{{ i.patients.date_of_birth.year }} - {{ today }}</td>
           <td style="text-align: end"> {{ i.room.room_number }}(Корпус {{ i.room.floor }})</td>
           <td style="text-align: end">{{ i.patients.additional_info }}</td>
-          <td style="text-align: end">{{i.start_date}}</td>
-          <td style="text-align: end">{{i.end_date}}</td>
+          <td style="text-align: end">{{ i.start_date }}</td>
+          <td style="text-align: end">{{ i.end_date }}</td>
           <td></td>
         </tr>
     {% endfor %}
@@ -148,133 +148,97 @@
   crossorigin="anonymous"></script>
 
 
-<!--<script>-->
 
-<!--        $(document).ready(function () {-->
-<!--            console.log("fcgvhbjko");-->
-<!--            window.news_index = '{% url "patients_m_p_paginator" %}';-->
+  <script>
+    // Paginator
+        $(document).ready(function () {
+            window.news_index = '{% url "patients_m_p_paginator" %}';
 
-<!--            var page = 1;-->
-<!--            var block_request = false;-->
-<!--            var end_pagination = false;-->
+            var page = 1;
+            var block_request = false;
+            var end_pagination = false;
 
-<!--            $(window).scroll(function () {-->
-<!--                var margin = $(document).height() - $(window).height() - 200;-->
+            $(window).scroll(function () {
+                var margin = $(document).height() - $(window).height() - 200;
 
-<!--                if ($(window).scrollTop() > margin && end_pagination === false && block_request === false) {-->
-<!--                    block_request = true;-->
-<!--                    page += 1;-->
+                if ($(window).scrollTop() > margin && end_pagination === false && block_request === false) {
+                    block_request = true;
+                    page += 1;
 
-<!--                    $.ajax({-->
-<!--                        type: 'GET',-->
-<!--                        url: window.news_index,-->
-<!--                        data: {-->
-<!--                            "page": page-->
-<!--                        },-->
-<!--                        success: function (data) {-->
-<!--                            if (data.end_pagination === true) {-->
-<!--                                end_pagination = true;-->
-<!--                            } else {-->
-<!--                                block_request = false;-->
-<!--                            }-->
-<!--                            $('.new-list').append(data.content);-->
-<!--                        }-->
-<!--                    })-->
-<!--                }-->
-<!--            });-->
-<!--        })-->
-<!--    </script>-->
+                    $.ajax({
+                        type: 'GET',
+                        url: window.news_index,
+                        data: {
+                            "page": page
+                        },
+                        success: function (data) {
+                            if (data.end_pagination === true) {
+                                end_pagination = true;
+                            } else {
+                                block_request = false;
+                            }
+                            $('.new-list').append(data.content);
+                        }
+                    })
+                }
+            });
+        })
 
-    <script>
-<!--    console.log('rvds')-->
-<!--    $(function () {-->
-<!--    console.log('fhgj');-->
-<!--    $('#search').onChange('change', function (e) {-->
-<!--        console.log('fhgj');-->
-<!--        e.preventDefault();-->
-<!--        $.ajax({-->
-<!--            type: $(this).attr('method'),-->
-<!--            url: '{% url "patients_m_p" %}',-->
-<!--            data: { name: $('#search').val() },-->
-<!--            success: function (response) {-->
-<!--                console.log(response);-->
-<!--            }-->
-<!--        });-->
-<!--    });-->
-<!--});-->
 
-<!--$(document).ready(function() {-->
-<!--    $("#search").on("input", function() {-->
-<!--        var inputValue = $(this).val();-->
-<!--        console.log("Input value changed: " + inputValue);-->
-<!--          $.ajax({-->
-<!--            type: POST,-->
-<!--            url: '{% url "patients_m_p" %}',-->
-<!--            data: { name: $('#search').val() },-->
-<!--            success: function (response) {-->
-<!--                console.log(response);-->
-<!--            }-->
-<!--        });-->
-<!--    });-->
-<!--});-->
-
-$(document).ready(function() {
-$("#selectAll").on("change", function() {
-    $(".rowCheckbox").prop("checked", $(this).prop("checked"));
-  });
-
-  $(".rowCheckbox").on("change", function() {
-    var rowData = $(this).closest("tr"); // Get the parent row
-    var data = {
-      id: rowData.data("id"), // Assuming you have an identifier for each row
-      isChecked: $(this).prop("checked")
-    };
-
-    $.ajax({
-      type: "GET",
-      url: "{% url 'export_to_exel' %}",
-      data: JSON.stringify(data),
-      contentType: "application/json",
-      success: function(response) {
-      },
-      error: function(error) {
-        console.error("Error:", error);
-      }
+  $(document).ready(function() {
+  $("#selectAll").on("change", function() {
+      $(".rowCheckbox").prop("checked", $(this).prop("checked"));
     });
-  });
-    $('#search').on('input', function() {
-        const inputValue = $(this).val();
-        const csrfToken = $('{% csrf_token %}').val();
 
-        $.ajax({
-            url: '{% url "patients_m_p_search" %}',
-            type: 'POST',
-<!--            contentType: 'application/json',-->
-            data: { inputValue },
-            headers: {
-                'X-CSRFToken': csrfToken
-            },
-            success: function(data) {
-              updateTable(data);
-              console.log(data);
-            },
-            error: function(error) {
-                console.error('Error:', error);
-            }
-        });
-    });
-    function updateTable(results) {
-<!--        const tbody = $('#html');-->
-        const tbody = $('#myTable tbody');
-        tbody.empty(); // Clear existing table body
+    $(".rowCheckbox").on("change", function() {
+      var rowData = $(this).closest("tr");
+      var data = {
+        id: rowData.data("id"), 
+        isChecked: $(this).prop("checked")
+      };
 
-        for (const result of results) {
-            const row = $('<td>');
-            tbody.append(row);
+      $.ajax({
+        type: "GET",
+        url: "{% url 'export_to_exel' %}",
+        data: JSON.stringify(data),
+        contentType: "application/json",
+        success: function(response) {
+        },
+        error: function(error) {
+          console.error("Error:", error);
         }
-    }
-});
-    </script>
+      });
+    });
+      $('#search').on('input', function() {
+          const inputValue = $(this).val();
+          const csrfToken = $('{% csrf_token %}').val();
+
+          $.ajax({
+              url: '{% url "patients_m_p_search" %}',
+              type: 'POST',
+              data: { inputValue },
+              headers: {
+                  'X-CSRFToken': csrfToken
+              },
+              success: function(data) {
+                updateTable(data);
+              },
+              error: function(error) {
+                  console.error('Error:', error);
+              }
+          });
+      });
+      function updateTable(results) {
+          const tbody = $('#myTable tbody');
+          tbody.empty(); // Clear existing table body
+
+          for (const result of results) {
+              const row = $('<td>');
+              tbody.append(row);
+          }
+      }
+  });
+</script>
 
 </body>
 </html>
