--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,78 @@
 .cursor-pointer {
   cursor: pointer;
 }
+.table__container {
+  width: 100%;
+  position: relative;
+  height: 80vh;
+}
+.table__container table thead {
+  position: sticky;
+  top: 0;
+}
+.table__container table tfoot {
+  position: sticky;
+  bottom: 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table a {
+  text-decoration: none;
+  color: black;
+}
+
+table thead {
+  top: 0;
+  position: sticky;
+  z-index: 2;
+}
+
+table thead tr th {
+  text-align: center;
+  vertical-align: middle;
+  outline: 1px solid rgb(176, 176, 176) !important;
+  background-color: #64b6f7;
+  font-size: 0.9rem;
+  padding: 4px;
+  font-weight: 500;
+}
+
+table tbody {
+  /* overflow-y: scroll;
+  height: 520px; */
+}
+
+table tbody tr td {
+  outline: 1px solid rgb(176, 176, 176) !important;
+  padding: 6px;
+  font-size: 0.9rem;
+}
+
+table tfoot {
+  position: sticky;
+  width: 100%;
+  bottom: 0;
+}
+
+table tfoot tr td {
+  background: #f5f5f5;
+  outline: 1px solid rgb(176, 176, 176) !important;
+  padding: 4px;
+  font-size: 0.9rem;
+}
+
+table tbody tr:hover {
+  background-color: #e0e0e0;
+}
+
+table tbody tr td .more-icon {
+  display: none;
+}
+
+table tbody tr:hover td .more-icon {
+  display: block;
+}
