--- a/src/pages/BookingWizard/BookingWizard.css
+++ b/src/pages/BookingWizard/BookingWizard.css
@@ -236,3 +236,15 @@
   background: var(--Background, #f5f5f5);
   padding: 12px;
 }
+
+.green__btn {
+  border-radius: 0.25rem;
+  background: var(--06-success-main, #4caf50);
+  color: white;
+  font-weight: 400;
+  line-height: 1.25rem;
+  letter-spacing: 0.00938rem;
+  font-size: 0.875rem;
+  padding: 2px 12px;
+  border: none;
+}
