--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -96,3 +96,26 @@
   color: white;
   text-decoration: none;
 }
+.error__alert {
+  width: 100%;
+  border-radius: 4px;
+  background: var(--03-error-main, #f44336);
+  display: flex;
+  padding: 0px 16px;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+  align-self: stretch;
+  color: white;
+  padding: 12px 16px;
+  margin-top: 30px;
+}
+.error__alert button {
+  background-color: transparent !important;
+  width: 18px !important;
+  height: 18px !important;
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  color: white !important;
+}
