--- a/backend/apps/warehouse/templates/v2/income/income_create_test.html
+++ b/backend/apps/warehouse/templates/v2/income/income_create_test.html
@@ -3,96 +3,77 @@
 {% extends "v2/income/base.html" %}
 
 {% block content %}
-<form enctype="multipart/form-data" class="container" method="post" id="product_form">
-    {% csrf_token %}
-    <!-- main form start --- in our case product form -->
-    <div class="card">
-        <div class="card-header card-header-secondary">
-            <h4 class="card-title">Add Products</h4>
-        </div>
-        {% for field in form %}
-            <div class="form-group card-body">
-                <label>{{field.label}}</label>
-                {% if field.field.required %}
-                    <span style="color: red;" class="required">*</span>
-                {% endif %}
 
-                {{field}}
-                {% if field.help_text %}
-                    <small style="color: grey">{{ field.help_text }}</small>
-                {% endif %}
-                {% for error in field.errors %}
-                    <p style="color: red">{{ error }}</p>
-                {% endfor %}
-            </div>
-        {% endfor %}
-    </div>
-    <!-- main form end --- in our case product form -->
-
-    <!-- inline form for Images start -->
-
-    <!-- EXPLAINING with named_formsets.images as formset -->
-    <!-- Note: named_formsets is used in get_context_data function in views.py -->
-    <!-- Note: here images is our ImageFormSet name, used in get_named_formsets function in views.py -->
-    {% with named_formsets.images as formset %}
-        {{ formset.management_form }}
-        <script type="text/html" id="images-template">   // id="inlineformsetname-template"
-            <tr id="images-__prefix__" class= hide_all>  // id="inlineformsetname-__prefix__"
-                {% for fields in formset.empty_form.hidden_fields %}
-                    {{ fields }}
-                {% endfor %}
-
-                {% for fields in formset.empty_form.visible_fields %}
-                    <td>{{fields}}</td>
-                {% endfor %}
-            </tr>
-        </script>
-
-    {% endwith %}
-    <!-- inline form for Images end -->
-
-    <!-- inline form for Variant start -->
-
-    <!-- EXPLAINING with named_formsets.variants as formset -->
-    <!-- Note: named_formsets is used in get_context_data function in views.py -->
-    <!-- Note: here variants is our VariantFormSet name, used in get_named_formsets function in views.py -->
-    {% with named_formsets.variants as formset %}
-        {{ formset.management_form }}
-        <script type="text/html" id="variants-template">  // id="inlineformsetname-template"
-            // id='inlineformsetname-__prefix__'
-            <tr id="variants-__prefix__" class= hide_all>
-                {% for fields in formset.empty_form.hidden_fields %}
-                    {{ fields }}
-                {% endfor %}
-
-                {% for fields in formset.empty_form.visible_fields %}
-                    <td>{{fields}}</td>
-                {% endfor %}
-            </tr>
-        </script>
-        <div class="table-responsive card mt-4">
+    <form enctype="multipart/form-data" class="container" method="post" id="product_form">
+        {% csrf_token %}
+        <!-- main form start --- in our case product form -->
+        <div class="card">
             <div class="card-header card-header-secondary">
-                <h4 class="card-title">Add Variants</h4>
+                <h4 class="card-title">Add Products</h4>
             </div>
-            <table class="table card-header">
-                <thead class="text-secondary">
-                    <th>Item <span style="color: red;" class="required">*</span></th>
-                    <th>Price <span style="color: red;" class="required">*</span></th>
+            {% for field in form %}
+                <div class="form-group card-body">
+                    <label>{{ field.label }}</label>
+                    {% if field.field.required %}
+                        <span style="color: red;" class="required">*</span>
+                    {% endif %}
+
+                    {{ field }}
+                    {% if field.help_text %}
+                        <small style="color: grey">{{ field.help_text }}</small>
+                    {% endif %}
+                    {% for error in field.errors %}
+                        <p style="color: red">{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endfor %}
+        </div>
+        <!-- main form end --- in our case product form -->
+
+        <!-- inline form for Variant start -->
+
+        <!-- EXPLAINING with named_formsets.variants as formset -->
+        <!-- Note: named_formsets is used in get_context_data function in views.py -->
+        <!-- Note: here variants is our VariantFormSet name, used in get_named_formsets function in views.py -->
+        {% with named_formsets.variants as formset %}
+            {{ formset.management_form }}
+            <script type="text/html" id="variants-template">  // id="inlineformsetname-template"
+            // id='inlineformsetname-__prefix__'
+            <tr id="variants-__prefix__" class=hide_all>
+                {% for fields in formset.empty_form.hidden_fields %}
+                    {{ fields }}
+                {% endfor %}
+
+                {% for fields in formset.empty_form.visible_fields %}
+                    <td>{{ fields }}</td>
+                {% endfor %}
+            </tr>
+            </script>
+            <div class="table-responsive card mt-4">
+                <div class="card-header card-header-secondary">
+                    <h4 class="card-title">Add Variants</h4>
+                </div>
+                <table class="table card-header">
+                    <thead class="text-secondary">
+                    <th>Size <span style="color: red;" class="required">*</span></th>
                     <th>Quantity <span style="color: red;" class="required">*</span></th>
+                    <th>Price <span style="color: red;" class="required">*</span></th>
+                    <th>Delete?</th>
                     <th>Custom Delete btn</th>
-                </thead>
-                <tbody id="item-variants">  <!-- id="item-inlineformsetname" -->
+                    </thead>
+                    <tbody id="item-variants">  <!-- id="item-inlineformsetname" -->
                     <!-- formset non forms errors -->
                     {% for error in formset.non_form_errors %}
                         <span style="color: red">{{ error }}</span>
                     {% endfor %}
                     {% for formss in formset %}
                         {{ formss.management_form }}
-                        <tr id="variants-{{ forloop.counter0 }}" class= hide_all>  <!-- id="inlineformsetname-counter" -->
+                        <tr id="variants-{{ forloop.counter0 }}" class=hide_all>
+                            <!-- id="inlineformsetname-counter" -->
                             {{ formss.id }}
                             {% for field in formss.visible_fields %}
                                 <td>
-                                    {{field}}
+                                    {{ field }}
                                     {% for error in field.errors %}
                                         <span style="color: red">{{ error }}</span>
                                     {% endfor %}
@@ -103,34 +84,44 @@
                             {% comment %} for delete {% endcomment %}
                             {% if formss.instance.pk %}
                                 <td>
-                                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal{{formss.instance.pk}}">
+                                    <button type="button" class="btn btn-danger" data-toggle="modal"
+                                            data-target="#exampleModal{{ formss.instance.pk }}">
                                         Delete
                                     </button>
                                     <!-- Modal -->
-                                    <div class="modal fade" id="exampleModal{{formss.instance.pk}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel{{formss.instance.pk}}" aria-hidden="true">
+                                    <div class="modal fade" id="exampleModal{{ formss.instance.pk }}" tabindex="-1"
+                                         role="dialog" aria-labelledby="exampleModalLabel{{ formss.instance.pk }}"
+                                         aria-hidden="true">
                                         <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel{{formss.instance.pk}}">Are Your Sure You Want To Delete This?</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title"
+                                                        id="exampleModalLabel{{ formss.instance.pk }}">Are Your Sure You
+                                                        Want To Delete This?</h5>
+                                                    <button type="button" class="close" data-dismiss="modal"
+                                                            aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <a href="{% url 'products:delete_variant' formss.instance.pk %}"
+                                                       type="button" class="btn btn-primary">Yes, Delete</a>
+                                                    <button type="button" class="btn btn-secondary"
+                                                            data-dismiss="modal">Close
+                                                    </button>
+                                                </div>
                                             </div>
-                                            <div class="modal-footer">
-                                                <a href="{% url 'products:delete_variant' formss.instance.pk %}" type="button" class="btn btn-primary">Yes, Delete</a>
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                            </div>
-                                        </div>
                                         </div>
                                     </div>
                                 </td>
                             {% endif %}
                         </tr>
                     {% endfor %}
-                </tbody>
-            </table>
-            <a href="#" id="add-variant-button" class="btn btn-secondary add-variants">Add More</a> <!-- id="add-inlineformsetname-button" -->
-        </div>
+                    </tbody>
+                </table>
+                <a href="#" id="add-variant-button" class="btn btn-secondary add-variants">Add More</a>
+                <!-- id="add-inlineformsetname-button" -->
+            </div>
 
         {% endwith %}
         <!-- inline form for Images end -->
@@ -138,38 +129,80 @@
         <div class="form-group">
             <button type="submit" class="btn btn-secondary btn-block">Submit</button>
         </div>
-</form>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <input type="text" id="search-product">
 
-<script>
-    $(document).ready(function() {
-        // when user clicks add more btn of images
-      $('.add-images').click(function(ev) {
-          ev.preventDefault();
-          var count = $('#item-images').children().length;
-          var tmplMarkup = $('#images-template').html();
-          var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
-          $('#item-images').append(compiledTmpl);
+    </form>
+    <table>
+    <tbody id="search-result">
 
-          // update form count
-          $('#id_images-TOTAL_FORMS').attr('value', count+1);
-      });
-  });
+    </tbody>
+    </table>
 
-  $(document).ready(function() {
-    // when user clicks add more btn of variants
-      $('.add-variants').click(function(ev) {
-          ev.preventDefault();
-          var count = $('#item-variants').children().length;
-          var tmplMarkup = $('#variants-template').html();
-          var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
-          $('#item-variants').append(compiledTmpl);
 
-          // update form count
-          $('#id_variants-TOTAL_FORMS').attr('value', count+1);
-      });
-  });
-</script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#search-product').on('input', function () {
+                var searchQuery = $(this).val();
+                if (searchQuery.length > 2) {
+                    $.ajax({
+                        url: '{% url 'warehouse_v2:v2-mp-item-search' %}?q=',
+                        data: {'query': searchQuery},
+                        success: function (data) {
+                            $('#search-result').empty();
+                            data.forEach(function (item) {
+                                $('#search-result').append(
+                                    `<tr class="result-item" data-item="${item.name}" data-id="${item.id}" data-company="${item.company}"
+                  data-price="${item.price}" data-seria="${item.seria}" data-inpack="${item.in_pack}"
+                  data-unit="${item.unit}">
+                <td>${item.name}</td>
+                <td>${item.company}</td>
+                <td>${item.price}</td>
+                <td>${item.seria}</td>
+                <td>${item.in_pack}</td>
+                <td>${item.unit}</td>
+              </tr>`
+                                );
+                            });
+                        }
+                    });
+                }
+
+            });
+
+
+                // when user clicks add more btn of variants
+                $('.add-variants').click(function (ev) {
+                    console.log(ev)
+                    ev.preventDefault();
+                    var count = $('#item-variants').children().length;
+                    var tmplMarkup = $('#variants-template').html();
+                    var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
+                    $('#item-variants').append(compiledTmpl);
+
+                    // update form count
+                    $('#id_variants-TOTAL_FORMS').attr('value', count + 1);
+                });
+
+                $(document).on('click', '.result-item', function (e) {
+                    let thisID = $(this).data('id')
+                    console.log(e)
+                    var count = $('#item-variants').children().length;
+                    var tmplMarkup = $('#variants-template').html();
+                    var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
+
+                    $('#item-variants').append(compiledTmpl);
+                    // update form count
+                    $('#id_variants-TOTAL_FORMS').attr('value', count + 1);
+console.log(thisID)
+                    $('#item-variants tr:last-child select option[value="'+thisID+'"]').prop('selected', 'selected')
+                });
+            });
+    </script>
 
 {% endblock content %}
